--- a/urn.com.proxml.milieuinfo.server-1.0.0/resources/html/milieuinfo.html
+++ b/urn.com.proxml.milieuinfo.server-1.0.0/resources/html/milieuinfo.html
@@ -1,10 +1,49 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>Departement Leefmilieu, Natuur en Energie - Milieuinfo</title>
-		<style type="text/css">@import url(/css/pure-min.css);</style>
+		<meta charset="UTF-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes"/>
+		<title>IMJV Archief / CBB Archief als Linked Data</title>
+		<style type="text/css">
+			@import url(/css/documentation.css);
+			@import url(/css/explorer.css);
+			@import url(/css/page.css);
+			@import url(/css/print.css);
+			@import url(/css/resource.css);
+			@import url(/css/responsive.css);
+		</style>
 	</head>
 	<body>
-		<h1>Milieuinfo</h1>
+		<div id="header">
+			<div id="logo">
+				<a href="/"><span>LNE</span></a>
+			</div>
+		</div>
+		
+		<div id="content">
+			<h1>Het Integraal Milieu JaarVerslag (IMJV) Archief als Linked Data.<br/>Het Centraal Bedrijven Bestand (CBB) als Linked Data.</h1>
+			<h2>Gepubliceerde datasets</h2>
+			<p>U vindt hier:</p>
+			<ul>
+				<li><a href="/dataset/imjv">IMJV</a></li>
+				<li><a href="/dataset/cbb">CBB</a></li>
+			</ul>
+			
+			<h2>Exploreer de dataset</h2>
+		</div>
+		
+		<div id="footer">
+			<div>
+				<div class="logo">
+					<span class="title">Vlaanderen</span>
+					<span class="claim">verbeelding werkt</span>
+				</div>
+				
+				<div class="site-info">
+					<h3>Dit is een officiële website van de Vlaamse overheid</h3>
+					<span>uitgegeven door het <a href="https://www.lne.be/">Departement Leefmilieu, Natuur en Energie (LNE)</a></span>
+				</div>
+			</div>
+		</div>
 	</body>
 </html>
