--- a/urn.com.proxml.milieuinfo.server-1.0.0/resources/html/milieuinfo.html
+++ b/urn.com.proxml.milieuinfo.server-1.0.0/resources/html/milieuinfo.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes"/>
-		<title>IMJV Archief / CBB Archief als Linked Data</title>
+		<title>LNE Linked Data</title>
 		<style type="text/css">
 			@import url(/css/documentation.css);
 			@import url(/css/explorer.css);
@@ -21,15 +21,12 @@
 		</div>
 		
 		<div id="content">
-			<h1>Het Integraal Milieu JaarVerslag (IMJV) Archief als Linked Data.<br/>Het Centraal Bedrijven Bestand (CBB) als Linked Data.</h1>
-			<h2>Gepubliceerde datasets</h2>
-			<p>U vindt hier:</p>
+			<h1>Departement Leefmilieu Natuur en Energie - Linked Data.</h1>
+			<p>Vanaf hier kan U naar:</p>
 			<ul>
-				<li><a href="/dataset/imjv">IMJV</a></li>
-				<li><a href="/dataset/cbb">CBB</a></li>
+				<li><a href="/imjv/home">IMJV</a></li>
+				<li><a href="/cbb/home">CBB</a></li>
 			</ul>
-			
-			<h2>Exploreer de dataset</h2>
 		</div>
 		
 		<div id="footer">
