added kws functionality to urn.com.proxml.milieuinfo.server-1.0.0

--- a/urn.com.proxml.milieuinfo.server-1.0.0/resources/html/milieuinfocbb.html
+++ b/urn.com.proxml.milieuinfo.server-1.0.0/resources/html/milieuinfocbb.html
@@ -42,7 +42,7 @@
 							</select>
 							
 							<div class="buttons">
-								<button type="submit">Identifier opzoeken</button>
+								<button type="submit">Zoekopdracht uitvoeren</button>
 								<button type="reset">Herladen</button>
 							</div>
 						</form>
