--- a/urn.com.proxml.milieuinfo.server-1.1.0/resources/html/milieuinfocbb.html
+++ b/urn.com.proxml.milieuinfo.server-1.1.0/resources/html/milieuinfocbb.html
@@ -25,7 +25,7 @@
 			<h2>Gepubliceerde datasets</h2>
 			<p>U vindt hier:</p>
 			<ul>
-				<li><a href="/dataset/cbb">Dataset CBB</a></li>
+				<li><a href="/dataset/cbb#id">Dataset CBB</a></li>
 			</ul>
 			
 			<h2>Exploreer de dataset</h2>
