--- a/urn.com.proxml.milieuinfo.server-1.1.0/resources/html/milieuinfoimjv.html
+++ b/urn.com.proxml.milieuinfo.server-1.1.0/resources/html/milieuinfoimjv.html
@@ -25,7 +25,7 @@
 			<h2>Gepubliceerde datasets</h2>
 			<p>U vindt hier:</p>
 			<ul>
-				<li><a href="/dataset/imjv">Dataset IMJV</a></li>
+				<li><a href="/dataset/imjv#id">Dataset IMJV</a></li>
 			</ul>
 			
 			<h2>Exploreer de dataset</h2>
@@ -50,7 +50,7 @@
 				</div>
 				
 				<div class="api" data-api="sparql">
-					<h4>Opzoeken met een zoekopdracht</h4>
+					<h4>Opzoeken met een SPARQL zoekopdracht</h4>
 					
 					<div class="form-area">
 						<form action="#" method="GET">
