neo4j lloyds visualization update

--- a/urn.com.ebc.neo4j.lloydsdemo-1.0.0/resources/html/lloydsdemo.html
+++ b/urn.com.ebc.neo4j.lloydsdemo-1.0.0/resources/html/lloydsdemo.html
@@ -35,6 +35,7 @@
 						<button type='button' id='expandnode' class='btn invisible'>Expand</button>
 		                <button type='button' id='prunenode' class='btn invisible'>Prune</button>
 		                <button type='button' id='removenode' class='btn invisible'>Remove</button>
+		                <button type='button' id='centernode' class='btn invisible'>Center</button>
 					</div>
 					
 					<div id="cy"></div>
@@ -60,6 +61,7 @@
 		</div>
 
 		<script type="text/javascript" src="/lloydsdemo/js/cytoscape.min.js"></script>
+		<script type="text/javascript" src="/lloydsdemo/js/cytoscape-cose-bilkent.js"></script>
 		<script type="text/javascript" src="/lloydsdemo/js/jquery-3.2.1.min.js"></script>
 		<script type="text/javascript" src="/lloydsdemo/js/popper.min.js"></script>
 		<script type="text/javascript" src="/lloydsdemo/js/bootstrap.min.js"></script>
