neo4j lloyds demo updated

--- a/urn.com.ebc.neo4j.lloydsdemo-1.0.0/resources/html/lloydsdemo.html
+++ b/urn.com.ebc.neo4j.lloydsdemo-1.0.0/resources/html/lloydsdemo.html
@@ -28,6 +28,8 @@
 		</nav>
 		
 		<div class="container-fluid">
+			<div id="modalview">
+			</div>
 			<div class="row">
 				<div class="col-sm-8">
 					<h1>Visualization</h1>
@@ -55,7 +57,6 @@
 						<tbody id="edgeview-tbody">
 						</tbody>
 					</table>
-
 				</div>
 			</div>
 		</div>
