neo4j lloyds demo update

--- a/urn.com.ebc.neo4j.lloydsdemo-1.0.0/resources/html/lloydsdemo.html
+++ b/urn.com.ebc.neo4j.lloydsdemo-1.0.0/resources/html/lloydsdemo.html
@@ -42,7 +42,7 @@
 					
 					<div id="cy"></div>
 				</div>
-				<div class="col-sm-3 offset-sm-1">
+				<div id="infopane" class="col-sm-3 offset-sm-1">
 					<h2>Node View</h2>
 					<table class="table table-striped table-bordered">
 						<thead class="thead-inverse" id="nodeview-thead">
